--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<input type="file" multiple class="filer">
+		<base href="/privatax">
 		<style type="text/css">
 			table {
 				border-collapse: collapse;
