--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<input type="file" multiple class="filer">
-		<base href="/privatax">
+		<base href="https://lempiy.github.io/privatax/">
 		<style type="text/css">
 			table {
 				border-collapse: collapse;
